apps/base/ntfy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
        app.kubernetes.io/name: ntfy
    spec:
      containers:
        - name: ntfy
          image: "binwiederhier/ntfy:v2.29.0"
          args: ["serve"]
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /var/lib/ntfy
              name: ntfy-data
            - mountPath: /var/cache/ntfy
              name: ntfy-cache
            - mountPath: /etc/ntfy
              name: ntfy-conf
      volumes:
        - name: ntfy-data
          persistentVolumeClaim:
            claimName: ntfy-data
        - name: ntfy-cache
          persistentVolumeClaim:
            claimName: ntfy-cache
        - name: ntfy-conf
          configMap:
            name: ntfy-conf
