apps/base/ntfy/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Ntfy
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: ntfy
    gethomepage.dev/namespace: ntfy
    gethomepage.dev/app: ntfy
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts: []
